Add CustomUserDetail Service to get the user authntication from inmemory h2 db

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,5 +5,8 @@ spring:
 #    user:
 #      name: Labuk-user
 #      password: pwd
-
+  h2:
+    console:
+      enabled: true
+#      path: /h2-console
 
